1. Added getting tokens ttl method

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,7 @@ logging:
     org.springframework.security.web: TRACE
     root: ${DEFAULT-LOGGING-LEVEL:INFO} #Уровень логирования сервиса. Возможные значения: ERROR / WARN / INFO / DEBUG / TRACE
 
-debug: ${DEBUG:false} #Режим запуска сервиса. Возможные значения: true (режим отладки) / false (обычный режим)
+debug: ${DEBUG:false} #Переключать режима отладки сервиса. Возможные значения: true (режим отладки) / false (обычный режим)
 
 flk:
-  active: Flk10000000, Flk10000001, Flk10000002 #Список активных ФЛК. Указанные номера должны соответствовать существующим в директории классов ФЛК
+  active: Flk10000000, Flk10000001, Flk10000002, Flk10000003 #Список активных ФЛК. Указанные номера должны соответствовать существующим в директории классов ФЛК
