fixed bug with getting notes method

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -74,4 +74,4 @@ debug:
   ${DEBUG:false} #Переключатель режима отладки сервиса. Возможные значения: true (режим отладки) / false (обычный режим)
 
 flk:
-  active: Flk10000001, Flk10000002, Flk10000003 #Список активных ФЛК. Указанные номера должны соответствовать существующим в директории классов ФЛК
+  active: Flk10000001, Flk10000002, Flk10000003, Flk10000004, Flk10000005, Flk10000006, Flk10000007, Flk10000008, Flk10000009, Flk10000010, Flk10000011, Flk10000012, Flk10000013, Flk10000014, Flk10000015, Flk10000016, Flk10000017, Flk10000018, Flk10000019, Flk10000020, Flk10000021, Flk10000022, Flk10000023, Flk10000024  #Список активных ФЛК. Указанные номера должны соответствовать существующим в директории классов ФЛК
